--- a/less/artist-container.less
+++ b/less/artist-container.less
@@ -18,3 +18,11 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+.artist-container{
+	.artist{
+		width: 50%;
+		
+	}
+
+}
