--- a/less/general.less
+++ b/less/general.less
@@ -20,9 +20,8 @@ time, mark, audio, video {
 }
 
 .artist-container{
-	.artist{
-		width: 50%;
-		
+border: solid black;
+	img{
+		width: 20%;
 	}
-
 }
