Java Script added

--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,12 @@
-@import "main";
+
 @import "variables";
-@import "navigation";
+@import "mixins";
+@import "reset";
 @import "header";
+@import "navigation";
 @import "title-container";
-@import "artist-container";
+@import "artists-container";
+
+
+
+
