--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,12 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+.mix-button {
+  text-align: center;
+  border: none;
+  width: 160px;
+  color: #111;
+  font-weight: 250;
+  transition: all 0.2s;
+  height: 40px;
+}
 html,
 body,
 div,
@@ -135,130 +140,88 @@ table {
 html,
 body {
   height: 100%;
-  background-color: white;
 }
 header nav {
   display: flex;
   justify-content: center;
+  border-radius: 5px;
   padding: 2%;
-  border: 1px solid #171717;
+  border-bottom: double #4e5152;
 }
 header nav a {
   color: #4e5152;
   padding: 0.1% 2%;
-  width: 1%;
-  text-decoration: none;
+  border: 1px #4e5152;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 .title-container {
-  border: solid black;
+  display: flex;
+  justify-content: center;
+  padding: 10%;
+  margin: 5%;
+  margin-left: 20%;
+  width: 60%;
+  background-image: url(/assets/Vincent-van-Gogh.jpg);
+}
+.title-container .first {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding: 10%;
-  margin: 5%;
-  width: 50%;
 }
 .title-container h1 {
-  font-size: 30px;
+  text-align: center;
+  color: cornsilk;
+  font-size: 60px;
   padding: 6%;
+  font-weight: bold;
 }
 .title-container button {
-  border: solid black;
+  text-align: center;
+  border: none;
+  width: 160px;
+  color: #111;
+  font-weight: 250;
+  transition: all 0.2s;
+  height: 40px;
 }
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+.title-container button:active {
+  transform: scaleX(0.9) translateY(4px);
 }
-.artist-container {
-  border: solid black;
+.title-container button:not(:active) {
+  border-bottom: 4px solid grey;
 }
-.artist-container img {
-  width: 20%;
+.image {
+  display: flex;
+  justify-content: space-around;
+}
+img {
+  width: 30%;
+}
+img:hover {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+.bio {
+  display: flex;
+  justify-content: space-around;
+  padding: 3%;
+}
+.Van-Gog {
+  width: 40%;
+}
+.Mallord {
+  width: 40%;
+  text-align: center;
+}
+h1 {
+  color: #c25e57;
+}
+a {
+  text-align: center;
+  text-decoration: none;
+  padding: 2%;
+  font-size: 20px;
 }
