--- a/less/header.less
+++ b/less/header.less
@@ -1,16 +1,20 @@
 header nav {
 	display:flex; 
-    justify-content:center;	
-    padding:2%;
-    border: 1px solid rgb(23, 23, 23);
-a {     
-        color:@main-color;
- 	    padding: 0.1% 2%;
- 	    width: 1%;
-  	    text-decoration: none;
+        justify-content: center;	
+        border-radius: 5px;
+        padding:2%;
+        border-bottom: double @main-color;
+        
+   
+   
+ a {     
+         color:@main-color;
+         padding: 0.1% 2%;
+         border:  1px @main-color;
         text-align: center;
-        font-size: 1rem;
-}
+        font-size: 1.5rem;
+         font-weight: bold;
+ }
 		
 		
 }//close header nav
