--- a/less/reset.less
+++ b/less/reset.less
@@ -1,3 +1,6 @@
+
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -18,10 +21,41 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-
-.artist-container{
-border: solid black;
-	img{
-		width: 20%;
-	}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
+body {
+	line-height: 1;
+	// border: 1px solid black;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+	box-sizing: border-box;
+	margin:0;
+	padding: 2, 0;
+}
+
+html, 
+body {
+	height: 100%;
+	
+}
+
